argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pwdgen
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: pwdgen
