argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pwdgen-ingress
spec:
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pwdgen
            port:
              name: http
